<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.ActivityMenuLateral"
    tools:showIn="@layout/app_bar_activity_menu_lateral">

    <ImageView
        android:id="@+id/iv_LogoPrincipal"
        android:layout_width="357dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/imagenlogopng2" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/menulat_titulo"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:text="@string/menulat_explicacion1"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDescripcion2"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="94dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/menulat_explicacion2"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</RelativeLayout>